--- a/src/app/shop/product-item/product-item.component.html
+++ b/src/app/shop/product-item/product-item.component.html
@@ -14,7 +14,12 @@
       <button class="btn btn-outline-secondary me-2">
         <i class="fa fa-shopping-cart"></i>
       </button>
-      <button class="btn btn-outline-secondary">View</button>
+      <button
+        class="btn btn-outline-secondary"
+        routerLink="/shop/{{ product.id }}"
+      >
+        View
+      </button>
     </div>
   </div>
 </div>
