--- a/src/app/core/nav-bar/nav-bar.component.html
+++ b/src/app/core/nav-bar/nav-bar.component.html
@@ -23,7 +23,7 @@
       [routerLinkActiveOptions]="{ exact: true }"
       >Shop</a
     >
-    <a class="p-2" routerLink="/contact" routerLinkActive="active">Contact</a>
+    <a class="p-2" routerLink="/test-error" routerLinkActive="active">Errors</a>
   </nav>
   <div class="d-flex align-items-center">
     <a class="position-relative">
