--- a/src/app/shop/product-item/product-item.component.html
+++ b/src/app/shop/product-item/product-item.component.html
@@ -1,25 +1,24 @@
 <div class="card h-100 shadow-sm" *ngIf="product">
-  <img
-    src="{{ product.pictureUrl }}"
-    alt="{{ product.name }}"
-    class="img-fluid bg-info"
-  />
+  <div class="image position-relative" style="cursor: pointer">
+    <img
+      src="{{ product.pictureUrl }}"
+      alt="{{ product.name }}"
+      class="img-fluid bg-info"
+    />
+    <div class="d-flex align-items-center justify-content-center hover-overlay">
+      <button class="btn btn-primary me-2">
+        <i class="fa fa-shopping-cart px-4"></i>
+      </button>
+      <button class="btn btn-primary px-4" routerLink="/shop/{{ product.id }}">
+        View
+      </button>
+    </div>
+  </div>
 
   <div class="card-body d-flex flex-column">
     <a href="" class="text-decoration-none">
       <h6 class="text-uppercase">{{ product.name }}</h6>
     </a>
     <span class="mb-2">{{ product.price | currency }}</span>
-    <div class="btn-group mt-auto">
-      <button class="btn btn-outline-secondary me-2">
-        <i class="fa fa-shopping-cart"></i>
-      </button>
-      <button
-        class="btn btn-outline-secondary"
-        routerLink="/shop/{{ product.id }}"
-      >
-        View
-      </button>
-    </div>
   </div>
 </div>
