--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 
 /* Importing Bootstrap SCSS file. */
-@import "./node_modules/bootstrap/scss/bootstrap";
+// @import "./node_modules/bootstrap/css/bootstrap";
 
-/* Importing Datepicker SCSS file. */
-@import "node_modules/ngx-bootstrap/datepicker/bs-datepicker";
+// /* Importing Datepicker SCSS file. */
+// @import "node_modules/ngx-bootstrap/datepicker/bs-datepicker";
 
-@import "node_modules/font-awesome/css/font-awesome.min.css";
+// @import "node_modules/bootswatch/dist/united/bootstrap.min.css";
+
+// @import "node_modules/font-awesome/css/font-awesome.min.css";
+
+label.xng-breadcrumb-trail {
+  color: orange;
+}
